--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 
 /* Hero Section */
 .hero {
-    background: url('images/hero-home-self.jpg') center/cover no-repeat;
+    background: url('images/hero-home-self.jpg') center/cover no-repeat fixed;
     color: rgb(255, 255, 255);
     text-align: center;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
